kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observers-ingress
  namespace: observers
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_MANAGER_ISSUER}
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOST_URL}
      http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
  tls:
    - hosts:
        - ${HOST_URL}
